@@ -35,6 +35,9 @@ sub STORABLE_thaw   {return}
 
 package DateTime::Infinite::Future;
 
+use strict;
+use warnings;
+
 use base qw(DateTime::Infinite);
 
 {
@@ -45,6 +48,7 @@ use base qw(DateTime::Infinite);
         local_rd_secs => DateTime::INFINITY,
         rd_nanosecs   => DateTime::INFINITY,
         tz            => DateTime::TimeZone->new( name => 'floating' ),
+        locale        => FakeLocale->instance(),
         },
         __PACKAGE__;
 
@@ -52,9 +56,12 @@ use base qw(DateTime::Infinite);
     $Pos->_calc_local_rd;
 
     sub new {$Pos}
-}
+ }
 
 package DateTime::Infinite::Past;
+
+use strict;
+use warnings;
 
 use base qw(DateTime::Infinite);
 
@@ -66,6 +73,7 @@ use base qw(DateTime::Infinite);
         local_rd_secs => DateTime::NEG_INFINITY,
         rd_nanosecs   => DateTime::NEG_INFINITY,
         tz            => DateTime::TimeZone->new( name => 'floating' ),
+        locale        => FakeLocale->instance(),
         },
         __PACKAGE__;
 
@@ -73,6 +81,78 @@ use base qw(DateTime::Infinite);
     $Neg->_calc_local_rd;
 
     sub new {$Neg}
+}
+
+package    # hide from PAUSE
+    FakeLocale;
+
+use strict;
+use warnings;
+
+use DateTime::Locale;
+
+my $Instance;
+
+sub instance {
+    return $Instance ||= bless { locale => DateTime::Locale->load('en_US') },
+        __PACKAGE__;
+}
+
+sub id {
+    return 'infinite';
+}
+
+sub language_id {
+    return 'infinite';
+}
+
+sub name {
+    'Fake locale for Infinite DateTime objects';
+}
+
+sub language {
+    'Fake locale for Infinite DateTime objects';
+}
+
+my @methods = qw(
+    script_id
+    territory_id
+    variant_id
+    script
+    territory
+    variant
+    native_name
+    native_language
+    native_script
+    native_territory
+    native_variant
+);
+
+for my $meth (@methods) {
+    no strict 'refs';
+    *{$meth} = sub { undef };
+}
+
+# Totally arbitrary
+sub first_day_of_week {
+    return 1;
+}
+
+sub prefers_24_hour_time {
+    return 0;
+}
+
+our $AUTOLOAD;
+sub AUTOLOAD {
+    my $self = shift;
+
+    my ($meth) = $AUTOLOAD =~ /::(\w+)$/;
+
+    if ( $meth =~ /format/ && $meth !~ /^(?:day|month|quarter)/ ) {
+        return $self->{locale}->$meth(@_);
+    }
+
+    return [];
 }
 
 1;
