@@ -16,6 +16,13 @@
   the time zone of the object, leaving it in a broken state. Reported by Bill
   Moseley. RT #83940.
 
+- DateTime::Infinite objects should no longer die when methods that require a
+  locale are called. Instead, these methods return undef for names and
+  Inf/-Inf for numbers. This affects methods such as day_name() as well as
+  CLDR and strftime formats. When a locale-specific format is used (like the
+  "full" datetime format) it uses the en_US format. Reported by Paul
+  Boldra. RT #67550.
+
 
 0.78   2012-11-16
 
